@@ -134,6 +134,8 @@ documents those changes that are of interest to users and admins.
  -- BLUEGENE - New blocks in dynamic mode will only be made in the system
     when the block is actually needed for a job, not when testing.
  -- BLUEGENE - Don't remove larger block used for small block until job starts.
+ -- Add new squeue output format and sort option of "%L" to print a job's time 
+    left (time limit minus time used).
 
 * Changes in SLURM 2.0.4
 ========================
